apps/hello-world/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-active
spec:
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-preview
spec:
  ports:
    - port: 80
      targetPort: 8080
